# ml-job-market-analysis

./: .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml  run.sh
market_analysis/: __main__.py
market_analysis/lib/io/: __init__.py  args.py  utils.py
src/: main.py
