[tool.poetry]
name = "market_analysis"
version = "0.1.0"
description = ""
authors = ["Jhonatan David <jhonatandaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyppeteer = "^1.0.2"
proxyscrape = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
